frontend/tests/cases/negative/graded/wild.gr
data Bool = True | False

data Vec (n : Nat) t where
  Nil  : Vec 0 t;
  Cons : t -> Vec n t -> Vec (n+1) t

isEmpty : ∀ {n : Nat} . Vec n Int → Bool
isEmpty Nil        = True;
isEmpty (Cons _ _) = False