frontend/tests/cases/negative/graded/wild.gr.output
Type checking failed: 
Linearity error: frontend/tests/cases/negative/graded/wild.gr:9:15:
Wildcard pattern `_` allowing a value to be discarded